Fixing Plasmoid->Calendar resizing bug

BUG:187699
Plasma::Applet is using startTimer/timerEvent methods.
Using virtual timerEvent on Plasma::Applet's children cause conflicts.

So it was replaced by a singleShot. And it makes code simpler.


svn path=/trunk/KDE/kdebase/workspace/; revision=950373